--- a/example/blog/the-time-machine.mdx
+++ b/example/blog/the-time-machine.mdx
@@ -1,14 +1,16 @@
 ---
-title: 'Test'
-date: '2024-12-16'
-tags: ['test']
-draft: true
-summary: Testing
+title: 'The Time Machine'
+date: '2018-08-15'
+tags: ['writings', 'book', 'reflection']
+draft: false
+summary: The Time Traveller (for so it will be convenient to speak of him) was
+  expounding a recondite matter to us. His pale grey eyes shone and
+  twinkled, and his usually pale face was flushed and animated...
 ---
 
 # The Time Machine by H. G. Wells
 
-_Title_: Testing1
+_Title_: The Time Machine
 
 _Author_: H. G. Wells
 
