Updated the posts

--- a/data/blog/congratulatory_speech_en.mdx
+++ b/data/blog/congratulatory_speech_en.mdx
@@ -6,7 +6,7 @@ draft: false
 summary: 'Congratulations on your new blog, Jerry!'
 ---
 
-# 블로그 개설 축사
+# Congratulatory Speech
 
 Congratulations on your new blog, Jerry!
 
